Added Tax 0% condition on invoice printout.

--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -267,44 +267,58 @@
 
 
                     </t>
-                    <t t-if="o.amount_tax >0">
+                    <t t-if="o.amount_tax >= 0">
                         <tr style="border-bottom:2px solid #d4d6d9">
                             <td name="td_section_subtotal">
                             </td>
-
                             <td name="td_section_subtotal">
                             </td>
                             <td name="td_section_subtotal" class="text-end">
                                 <strong class="mr16">Amount without tax (<span t-field="o.currency_id"/>)
                                 </strong>
-
                             </td>
                             <td colspan="99" class="is-subtotal text-end">
                                 <span style="text-align:right;" class="m-0" t-field="o.amount_untaxed"/>
                             </td>
                         </tr>
-                        <t t-foreach="o.line_ids" t-as="line">
-                            <t t-if="line.display_type=='tax'">
-                                <tr style="border-bottom:2px solid #d4d6d9">
-                                    <td name="td_section_subtotal_tax">
-                                    </td>
-
-                                    <td name="td_section_subtotal_tax">
-                                    </td>
-                                    <td name="td_section_subtotal_tax" class="text-end">
-                                        <strong class="mr16">Tax
-                                            <span t-esc="round(line.balance/line.tax_base_amount *-100,2)"/>
-                                            %
-                                        </strong>
-
-                                    </td>
-                                    <td colspan="99" class="is-subtotal text-end">
-                                        <span style="text-align:right;" class="m-0" t-esc="line.balance*-1"
-                                              t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                                    </td>
-                                </tr>
+                        <!-- Check if there are any tax lines -->
+                        <t t-if="not o.line_ids.filtered(lambda l: l.display_type=='tax')">
+                            <tr style="border-bottom:2px solid #d4d6d9">
+                                <td name="td_section_subtotal_tax">
+                                </td>
+                                <td name="td_section_subtotal_tax">
+                                </td>
+                                <td name="td_section_subtotal_tax" class="text-end">
+                                    <strong class="mr16">Tax 0 %</strong>
+                                </td>
+                                <td colspan="99" class="is-subtotal text-end">
+                                    <span style="text-align:right;" class="m-0" t-esc="0.00"
+                                          t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                                </td>
+                            </tr>
+                        </t>
+                        <t t-else="">
+                            <t t-foreach="o.line_ids" t-as="line">
+                                <t t-if="line.display_type=='tax'">
+                                    <tr style="border-bottom:2px solid #d4d6d9">
+                                        <td name="td_section_subtotal_tax">
+                                        </td>
+                                        <td name="td_section_subtotal_tax">
+                                        </td>
+                                        <td name="td_section_subtotal_tax" class="text-end">
+                                            <strong class="mr16">Tax
+                                                <span t-esc="round(line.balance / line.tax_base_amount * -100, 2)"/>
+                                                %
+                                            </strong>
+                                        </td>
+                                        <td colspan="99" class="is-subtotal text-end">
+                                            <span style="text-align:right;" class="m-0"
+                                                  t-esc="round(line.balance * -1, 2)"
+                                                  t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                                        </td>
+                                    </tr>
+                                </t>
                             </t>
-
                         </t>
                     </t>
                     <tr style="border-bottom:2px solid #d4d6d9">
