Added Tax Value exact field in printout.

--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -313,7 +313,7 @@
                                         </td>
                                         <td colspan="99" class="is-subtotal text-end">
                                             <span style="text-align:right;" class="m-0"
-                                                  t-esc="round(line.balance * -1, 2)"
+                                                  t-esc="round(o.amount_tax, 2)"
                                                   t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                                         </td>
                                     </tr>
