Fix a bug in intermediary Swift

--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -707,7 +707,7 @@
                                 <strong>Intermediary Bank</strong>
                             </div>
                             <div class="col-7" style="padding-left: 0px;">
-                                <t t-if="o.company_bank_account_id.">
+                                <t t-if="o.company_bank_account_id.inter_mediatory_bank_id">
                                     <span class="m-0"
                                           t-field="o.company_bank_account_id.inter_mediatory_bank_id.name"/>
                                 </t>
