Fix a bug in intermediary Swift.

--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -690,7 +690,7 @@
                         </div>
 
 
-                        <div class="col-12 row" t-if="o.partner_id.company_bank_account_id.bank_id.bic">
+                        <div class="col-12 row" t-if="o.company_bank_account_id.bank_id.bic">
                             <div class="col-5" style="padding-left: 4px;">
                                 <strong>Swift Code</strong>
                             </div>
