Update proforma invoice and invoice price_unit precision to 2 decimal places

--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -214,7 +214,7 @@
 
                                 <td t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                     <t t-if="line.product_id.name != 'Down payment'">
-                                        <span class="text-nowrap" t-field="line.price_unit"/>
+                                        <span class="text-nowrap" t-field="line.price_unit" t-options='{"precision": 2}'/>
                                     </t>
                                     <t t-else="">
                                         <span></span>
