--- a/fendahl_interface/views/invoice_controller.xml
+++ b/fendahl_interface/views/invoice_controller.xml
@@ -41,7 +41,7 @@
             <field name="binding_view_types">tree,form</field>
             <field name="state">code</field>
             <field name="code">
-                action = records.create_bill(True)
+                action = records.create_bill()
             </field>
         </record>
         <record id="model_account_move_line_create_invoice" model="ir.actions.server">
