--- a/oe_kemoxon_delivery_custom/views/account_move_line_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_line_views.xml
@@ -1,14 +1,25 @@
 <odoo>
     <data>
 
-  <record id="model_account_move_line_action_fix_downpayment_account" model="ir.actions.server">
-    <field name="name">Fix Downpayment account</field>
-    <field name="model_id" ref="account.model_account_move_line"/>
-    <field name="binding_model_id" ref="account.model_account_move_line"/>
-    <field name="binding_view_types">list,form</field>
-    <field name="state">code</field>
-    <field name="code">records.update_accounts_from_product()</field>
-</record>
+        <record id="view_move_line_tree_inherited" model="ir.ui.view">
+            <field name="name">account.move.line.tree.inherited</field>
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_move_line_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='account_id']" position="after">
+                    <field name="stock_picking_id" widget="open_transfer_widget"/>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="model_account_move_line_action_fix_downpayment_account" model="ir.actions.server">
+            <field name="name">Fix Downpayment account</field>
+            <field name="model_id" ref="account.model_account_move_line"/>
+            <field name="binding_model_id" ref="account.model_account_move_line"/>
+            <field name="binding_view_types">list,form</field>
+            <field name="state">code</field>
+            <field name="code">records.update_accounts_from_product()</field>
+        </record>
 
         <!--        <record id="view_move_form_account_payment" model="ir.ui.view">-->
         <!--            <field name="name">account.payment.form</field>-->
