--- a/kemexon_financial_instruments/views/purchase_order_inherited_view.xml
+++ b/kemexon_financial_instruments/views/purchase_order_inherited_view.xml
@@ -6,7 +6,7 @@
             <field name="inherit_id" ref="purchase.purchase_order_form" />
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='currency_id']" position="after">
-                    <field name="fi_lc_ids" />
+                    <field name="fi_lc_id" />
                 </xpath>
             </field>
         </record>
