--- a/kemexon_financial_instruments/views/fi_lc_lines_views.xml
+++ b/kemexon_financial_instruments/views/fi_lc_lines_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="view_lc_lines_tree" model="ir.ui.view">
-        <field name="name">lc.lines.tree</field>
-        <field name="model">lc.lines</field>
+    <record id="view_fi_lc_lines_tree" model="ir.ui.view">
+        <field name="name">fi.lc.lines.tree</field>
+        <field name="model">fi.lc.lines</field>
         <field name="arch" type="xml">
             <tree editable="bottom">
                 <field name="product"/>
@@ -16,9 +16,9 @@
             </tree>
         </field>
     </record>
-    <record id="view_lc_lines_form" model="ir.ui.view">
-        <field name="name">lc.lines.form</field>
-        <field name="model">lc.lines</field>
+    <record id="view_fi_lc_lines_form" model="ir.ui.view">
+        <field name="name">fi.lc.lines.form</field>
+        <field name="model">fi.lc.lines</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
@@ -35,10 +35,10 @@
             </form>
         </field>
     </record>
-    <record id="action_lc_lines" model="ir.actions.act_window">
+    <record id="action_fi_lc_lines" model="ir.actions.act_window">
         <field name="name">Financial Instrument Lines</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">lc.lines</field>
+        <field name="res_model">fi.lc.lines</field>
         <field name="view_mode">tree</field>
         <field name="context">{}</field>
         <field name="help" type="html">
@@ -47,9 +47,9 @@
             </p>
         </field>
     </record>
-    <menuitem id="menu_lc_Lines"
+    <menuitem id="menu_fi_lc_Lines"
               name="Financial Instruments Lines"
-              action="action_lc_lines"
+              action="action_fi_lc_lines"
               parent="account.menu_finance_receivables"
               sequence="6"/>
 </odoo>
