--- a/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
@@ -119,7 +119,7 @@
                                 <span>Premium</span>
                             </th>
                         </t>
-                        <th name="th_priceunit" class="text-end">Rate</th>
+                        <th name="th_priceunit" class="text-end">Price</th>
                         <th name="th_discount" t-if="display_discount" class="text-end"
                             groups="product.group_discount_per_so_line">
                             <span>Disc.%</span>
